tests/errors/const_reassign.bs
// Test: Should FAIL - reassigning a const
fn main() {
    const X = 10
    X = 20
}
